deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: database
  name: mysql-deployment
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        namespace: database
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7.28
---
apiVersion: v1
kind: Service
metadata:
  namespace: database
  name: mysql
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: mysql
---
apiVersion: v1
kind: Namespace
metadata:
  name: ems
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ems
  name: ems-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host:
      http:
        paths:
          - path: /
            backend:
              serviceName: server
              servicePort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: ems
  labels:
    app: ems
spec:
  selector:
    matchLabels:
      app: ems
  template:
    metadata:
      labels:
        namespace: ems
        app: ems
    spec:
      containers:
        - name: ems-server
          image: mksharma/emp-org-chart:v2
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: ems
  name: server
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  type: ClusterIP
  selector:
    app: ems
  ports:
    - port: 8080
      protocol: TCP
